deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: reddit-clone-deployment
   labels:
      app: reddit-clone
spec:
   replicas: 2
   selector:
      matchLabels:
         app: reddit-clone
   template:
      metadata:
          labels:
             app: reddit-clone
      spec:
         containers:
         - name: reddit-clone
           image: pranjal143/reddit-clone
           ports:
            - containerPort: 3000
