service.yml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
spec:
  selector:
    app: reddit-clone
  ports:
  - protocol: TCP
    port: 80          # Service port (ClusterIP)
    targetPort: 3000  # Container port
  type: ClusterIP     # Internal only
