ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddit-clone-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: reddit.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 80
